--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
-    "sass": "^1.83.0"
+    "sass": "^1.83.0",
+    "swiper": "^11.1.15"
   },
   "scripts": {
     "start": "react-scripts start",
